trying to make more books

--- a/index.html
+++ b/index.html
@@ -16,28 +16,54 @@
 
 		<nav>
 			<ul class="navbar">
-				<li class="book">
+				<li class="book1">
+					<a href="">
+						<p class="boxes1"></p>
+							<span id="box1"></span>
+							<span class="box"></span>
+							<span class="box"></span>
+							<span class="box"></span>
+						</p>
+						<p class="book-title">Introduction</p>
+						<p class="author">Irene Ahn</p>
+						<p class="year">2024</p>
+					</a>
+				</li>
+				<li class="book2">
+					<a href="">
+						<p class="boxes1"></p>
+							<span id="box1"></span>
+							<span class="box"></span>
+							<span class="box"></span>
+							<span class="box"></span>
+						</p>
+						<p class="book-title">Introduction</p>
+						<p class="author">Irene Ahn</p>
+						<p class="year">2024</p>
+					</a>
+				</li>
+				<li class="book3">
 					<a href="../01 colour and culture/">
-						<p>01</p>
-						<p>Colour and Culture</p>
-						<p>Ruben Pater</p>
-						<p>2016</p>
+						<p class="booknumbers">01</p>
+						<p class="book-title">Colour and Culture</p>
+						<p class="author">Ruben Pater</p>
+						<p class="year">2016</p>
 					</a>
 				</li>
-				<li class="book">
+				<li class="book4">
 					<a href="../02 gradients/">
-						<p>02</p> 
-						<p>Gradients</p>
-						<p>Daisy Alioto</p>
-						<p>2019</p>
+						<p class="booknumbers">02</p> 
+						<p class="book-title">Gradients</p>
+						<p class="author">Daisy Alioto</p>
+						<p class="year">2019</p>
 					</a>
 				</li>
-				<li class="book">
+				<li class="book5">
 					<a href="../03 everyday color theory/">
-						<p>03</p> 
-						<p id="book3-title">Everyday Color Theory</p>
-						<p>Cortney Cassidy</p>
-						<p>2020</p>
+						<p class="booknumbers">03</p> 
+						<p id="book5-title">Everyday Color Theory</p>
+						<p class="author">Cortney Cassidy</p>
+						<p class="year">2020</p>
 					</a>
 				</li>
 			</ul>
