--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
 				<li class="book1">
 					<a href="">
 						<p class="boxes1"></p>
-							<span id="box1"></span>
+							<span class="box1"></span>
 							<span class="box"></span>
 							<span class="box"></span>
 							<span class="box"></span>
 						</p>
 						<p class="book-title">Introduction</p>
-						<p class="author">Irene Ahn</p>
+						<p class="author1">Irene Ahn</p>
 						<p class="year">2024</p>
 					</a>
 				</li>
 				<li class="book2">
 					<a href="">
 						<p class="boxes1"></p>
-							<span id="box1"></span>
+							<span class="box1"></span>
 							<span class="box"></span>
 							<span class="box"></span>
 							<span class="box"></span>
 						</p>
 						<p class="book-title">Introduction</p>
-						<p class="author">Irene Ahn</p>
+						<p class="author2">Irene Ahn</p>
 						<p class="year">2024</p>
 					</a>
 				</li>
@@ -46,7 +46,7 @@
 					<a href="../01 colour and culture/">
 						<p class="booknumbers">01</p>
 						<p class="book-title">Colour and Culture</p>
-						<p class="author">Ruben Pater</p>
+						<p class="author3">Ruben Pater</p>
 						<p class="year">2016</p>
 					</a>
 				</li>
@@ -54,7 +54,7 @@
 					<a href="../02 gradients/">
 						<p class="booknumbers">02</p> 
 						<p class="book-title">Gradients</p>
-						<p class="author">Daisy Alioto</p>
+						<p class="author4">Daisy Alioto</p>
 						<p class="year">2019</p>
 					</a>
 				</li>
@@ -62,7 +62,7 @@
 					<a href="../03 everyday color theory/">
 						<p class="booknumbers">03</p> 
 						<p id="book5-title">Everyday Color Theory</p>
-						<p class="author">Cortney Cassidy</p>
+						<p class="author5">Cortney Cassidy</p>
 						<p class="year">2020</p>
 					</a>
 				</li>
