--- a/index.html
+++ b/index.html
@@ -18,12 +18,7 @@
 			<ul class="navbar">
 				<li class="book1">
 					<a href="">
-						<p class="boxes1"></p>
-							<span class="box1"></span>
-							<span class="box"></span>
-							<span class="box"></span>
-							<span class="box"></span>
-						</p>
+						<p class="circle"></p>
 						<p class="book-title">Introduction</p>
 						<p class="author1">Irene Ahn</p>
 						<p class="year">2024</p>
@@ -31,11 +26,7 @@
 				</li>
 				<li class="book2">
 					<a href="">
-						<p class="boxes1"></p>
-							<span class="box1"></span>
-							<span class="box"></span>
-							<span class="box"></span>
-							<span class="box"></span>
+						<p class="circle"></p>
 						</p>
 						<p class="book-title">Introduction</p>
 						<p class="author2">Irene Ahn</p>
