common.css in landing page

--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="../assets/reset.css" rel="stylesheet">
+		<link href="../assets/common.css" rel="stylesheet">
 		<link href="landing.css" rel="stylesheet">
 	</head>
 	
 	<body>
 		<header>
-			<h1><span id="the">The</span> <span id="power">Power</span> of <span id="color">Color:</span><wbr> Culture, Design, and Theory</h1>
+			<h1>The Power of Color:<wbr> Culture, Design, and Theory</h1>
 			<p>Color is a big part of how we see and understand the world. This collection of articles looks at how color has different meanings in cultures, how it’s used in trendy designs like gradients, and the basic ideas behind color theory. Together, they show how color can bring people together, spark creativity, and change how we experience things.</p>
 		</header>
 
 		<nav>
-			<ul class="navbar">
+			<ul class="bookshelf">
 				<li class="book1">
 					<a href="">
 						<p class="circle"></p>
-						<p class="book-title">Introduction</p>
+						<p class="book1-title">Introduction</p>
 						<p class="author1">Irene Ahn</p>
 						<p class="year">2024</p>
 					</a>
@@ -28,8 +29,8 @@
 					<a href="">
 						<p class="circle"></p>
 						</p>
-						<p class="book-title">Introduction</p>
-						<p class="author2">Irene Ahn</p>
+						<p class="book1-title">Introduction</p>
+						<p class="author1">Irene Ahn</p>
 						<p class="year">2024</p>
 					</a>
 				</li>
