--- a/01 colour and culture/index.html
+++ b/01 colour and culture/index.html
@@ -7,24 +7,23 @@
 		<link href="style.css" rel="stylesheet">
 	</head>
 
-	<body>
-		<nav>
-			<ul class="navbar">
-				<li>
-					<a href="../">Home</a>
-				</li>
-				<li>
-					<a href="../01 colour and culture/">01</a>
-				</li>
-				<li>
-					<a href="../02 gradients/">02</a>
-				</li>
-				<li>
-					<a href="../03 everyday color theory/">03</a>
-				</li>
-			</ul>
-		</nav>
-
+	<body></body>
+			<nav>
+				<ul class="navbar">
+					<li>
+						<a href="../">Home</a>
+					</li>
+					<li>
+						<a href="../01 colour and culture/">01</a>
+					</li>
+					<li>
+						<a href="../02 gradients/">02</a>
+					</li>
+					<li>
+						<a href="../03 everyday color theory/">03</a>
+					</li>
+				</ul>
+			</nav>
 		<header>
 			<h1 id="heading-number">01</h1>
 			<h1>Colour and Culture</h1>
