--- a/index.html
+++ b/index.html
@@ -10,55 +10,55 @@
 	</head>
 	
 	<body>
+		<nav>
+			<ul class="navbar">
+				<li>
+					<a href="../">Home</a>
+				</li>
+				<li>
+					<a href="../01 colour and culture/">01</a>
+				</li>
+				<li>
+					<a href="../02 gradients/">02</a>
+				</li>
+				<li>
+					<a href="../03 everyday color theory/">03</a>
+				</li>
+			</ul>
+		</nav>
+
 		<header>
 			<h1>The Power of Color:<wbr> Culture, Design, and Theory</h1>
 			<p>Color is a big part of how we see and understand the world. This collection of articles looks at how color has different meanings in cultures, how it’s used in trendy designs like gradients, and the basic ideas behind color theory. Together, they show how color can bring people together, spark creativity, and change how we experience things.</p>
 		</header>
 
-		<nav>
+		<section>
 			<ul class="bookshelf">
 				<li class="book1">
-					<a href="">
-						<p class="circle"></p>
-						<p class="book1-title">Introduction</p>
-						<p class="author1">Irene Ahn</p>
-						<p class="year">2024</p>
-					</a>
-				</li>
-				<li class="book2">
-					<a href="">
-						<p class="circle"></p>
-						</p>
-						<p class="book1-title">Introduction</p>
-						<p class="author1">Irene Ahn</p>
-						<p class="year">2024</p>
-					</a>
-				</li>
-				<li class="book3">
 					<a href="../01 colour and culture/">
 						<p class="booknumbers">01</p>
 						<p class="book-title">Colour and Culture</p>
-						<p class="author3">Ruben Pater</p>
+						<p class="author1">Ruben Pater</p>
 						<p class="year">2016</p>
 					</a>
 				</li>
-				<li class="book4">
+				<li class="book2">
 					<a href="../02 gradients/">
 						<p class="booknumbers">02</p> 
 						<p class="book-title">Gradients</p>
-						<p class="author4">Daisy Alioto</p>
+						<p class="author2">Daisy Alioto</p>
 						<p class="year">2019</p>
 					</a>
 				</li>
-				<li class="book5">
+				<li class="book3">
 					<a href="../03 everyday color theory/">
 						<p class="booknumbers">03</p> 
-						<p id="book5-title">Everyday Color Theory</p>
-						<p class="author5">Cortney Cassidy</p>
+						<p id="book3-title">Everyday Color Theory</p>
+						<p class="author3">Cortney Cassidy</p>
 						<p class="year">2020</p>
 					</a>
 				</li>
 			</ul>
-		</nav>
+		</section>
 	</body>	
 </html>
