--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 			Landing Page
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="../assets/reset.css" rel="stylesheet">
-		<link href="../assets/common.css" rel="stylesheet">
+		<link href="assets/reset.css" rel="stylesheet">
+		<link href="assets/common.css" rel="stylesheet">
 		<link href="landing.css" rel="stylesheet">
 	</head>
 	
