--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 					<a href="../">Home</a>
 				</li>
 				<li>
-					<a href="../01 colour and culture/">01</a>
+					<a href="01 colour and culture/">01</a>
 				</li>
 				<li>
-					<a href="../02 gradients/">02</a>
+					<a href="02 gradients/">02</a>
 				</li>
 				<li>
-					<a href="../03 everyday color theory/">03</a>
+					<a href="03 everyday color theory/">03</a>
 				</li>
 			</ul>
 		</nav>
