removed ../ on landing page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<section>
 			<ul class="bookshelf">
 				<li class="book1">
-					<a href="../01 colour and culture/">
+					<a href="01 colour and culture/">
 						<p class="booknumbers">01</p>
 						<p class="book-title">Colour and Culture</p>
 						<p class="author1">Ruben Pater</p>
@@ -43,7 +43,7 @@
 					</a>
 				</li>
 				<li class="book2">
-					<a href="../02 gradients/">
+					<a href="02 gradients/">
 						<p class="booknumbers">02</p> 
 						<p class="book-title">Gradients</p>
 						<p class="author2">Daisy Alioto</p>
@@ -51,7 +51,7 @@
 					</a>
 				</li>
 				<li class="book3">
-					<a href="../03 everyday color theory/">
+					<a href="03 everyday color theory/">
 						<p class="booknumbers">03</p> 
 						<p id="book3-title">Everyday Color Theory</p>
 						<p class="author3">Cortney Cassidy</p>
