added footer on landing page

--- a/01 colour and culture/index.html
+++ b/01 colour and culture/index.html
@@ -138,7 +138,7 @@
 				<p>
 					Designed in 2024 by Irene Ahn
 				</p>
-				<a id="top" href="#">⬆</a>
+				<a id="top" href="#">↑</a>
 			</footer>
 	</body>
 </html>
