--- a/index.html
+++ b/index.html
@@ -60,5 +60,11 @@
 				</li>
 			</ul>
 		</section>
+
+		<footer>
+			<p>
+				Designed in 2024 by Irene Ahn
+			</p>
+		</footer>
 	</body>	
 </html>
