--- a/02 gradients/index.html
+++ b/02 gradients/index.html
@@ -135,7 +135,7 @@
 				<p>
 					Designed in 2024 by Irene Ahn
 				</p>
-				<a id="top" href="#">⬆</a>
+				<a id="top" href="#">↑</a>
 			</footer>
 	</body>
 </html>
