--- a/03 everyday color theory/index.html
+++ b/03 everyday color theory/index.html
@@ -10,21 +10,23 @@
 	<body>
 		<nav>
 			<ul class="navbar">
-				<li>
+				<li id="home">
 					<a href="../">Home</a>
 				</li>
-				<li>
-					<a href="../01 colour and culture/">01</a>
-				</li>
-				<li>
-					<a href="../02 gradients/">02</a>
-				</li>
-				<li>
-					<a href="../03 everyday color theory/">03</a>
-				</li>
+				<div class="nav-article">
+					<li id="nav01">
+						<a href="../01 colour and culture/">01</a>
+					</li>
+					<li id="nav02">
+						<a href="../02 gradients/">02</a>
+					</li>
+					<li id="nav03">
+						<a href="../03 everyday color theory/">03</a>
+					</li>
+				</div>
 			</ul>
 		</nav>
-
+		
 		<header>
 			<h1 id="heading-number">03</h1>
 			<h1>Everyday Color Theory</h1>
