--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
 	<body>
 		<nav>
 			<ul class="navbar">
-				<li>
+				<li id="home">
 					<a href="../">Home</a>
 				</li>
-				<li>
-					<a href="01 colour and culture/">01</a>
-				</li>
-				<li>
-					<a href="02 gradients/">02</a>
-				</li>
-				<li>
-					<a href="03 everyday color theory/">03</a>
-				</li>
+				<div class="nav-article">
+					<li id="nav01">
+						<a href="../01 colour and culture/">01</a>
+					</li>
+					<li id="nav02">
+						<a href="../02 gradients/">02</a>
+					</li>
+					<li id="nav03">
+						<a href="../03 everyday color theory/">03</a>
+					</li>
+				</div>
 			</ul>
 		</nav>
 
