--- a/index.html
+++ b/index.html
@@ -29,13 +29,10 @@
 			</ul>
 		</nav>
 
-		<header>
+		<header class="colophon">
 			<h1>The Power of Color:<wbr> Culture, Design, and Theory</h1>
-		</header>
-
-		<section>
 			<p>Color is a big part of how we see and understand the world. This collection of articles looks at how color has different meanings in cultures, how it’s used in trendy designs like gradients, and the basic ideas behind color theory. Together, they show how color can bring people together, spark creativity, and change how we experience things.</p>
-		</section>
+		</header>
 
 		<section>
 			<ul class="bookshelf">
