--- a/01 colour and culture/index.html
+++ b/01 colour and culture/index.html
@@ -40,7 +40,7 @@
 		</header>
 
 		<section>
-			<h2 id="first-h2">❯ Colour Psychology</h2>
+			<h2 id="first-h2">Colour Psychology</h2>
 			<p>
 				How people respond to colour is of great interest to those who work in marketing. Colour psychology research is often focused on how the colour of a logo or a product will yield higher sales, and what colour preferences can be found in certain age groups and cultures. 
 			</p>
@@ -56,7 +56,7 @@
 		</section>
 
 			<section>
-				<h2>❯ Colour and Culture</h2>
+				<h2>Colour and Culture</h2>
 				<p>
 					Research shows that ninety-eight languages have words for the same eleven basic colours; however, the meaning a colour may have can be very different. There are conflicting theories on whether the cultural meanings of colours can be categorised. Meanings can change over time and depend on the context. Black may be the colour of mourning in many countries, though a black book cover or a black poster is not always associated with death. Another example is that brides in China traditionally wear red, but many brides have started to wear white in recent decades. The cultural meaning of colours is not set but always changing. The next few pages list some of the meanings of colours in different cultures.
 				</p>
@@ -119,7 +119,7 @@
 			</section>
 
 			<section>
-				<h2>❯ National Colours</h2>
+				<h2>National Colours</h2>
 				<p>
 					The flag has been the most prominent symbol of national identity since the nineteenth century. A new national flag often marks a revolution  or a political change. Flags have a military origin, and were used to identify military units from one another in the Roman legions.
 				</p>
