--- a/02 gradients/index.html
+++ b/02 gradients/index.html
@@ -40,14 +40,14 @@
 		</header>
 
 		<section>
-			<h2 id="first-h2">❯ What it is?</h2>
+			<h2 id="first-h2">What it is?</h2>
 			<p>
 				A digital or print effect where one color fades into another. Typically rendered in soft or pastel tones.
 			</p>
 		</section>
 
 			<section>
-				<h2>❯ Where it is?</h2>
+				<h2>Where it is?</h2>
 				<p>
 					Gradients are seemingly everywhere in media and marketing. They are part of a suite of Facebook status backdrops introduced in 2017 and the branding for the New York Times’ popular podcast The Daily, which displays a yellow to blue gradient.
 				</p>
@@ -66,7 +66,7 @@
 			</section>
 
 			<section>
-				<h2>❯ Why you’re seeing it everywhere?</h2>
+				<h2>Why you’re seeing it everywhere?</h2>
 				<p>
 					Gradients are the confluence of three different trends: Light and Space art, vaporwave, and bisexual lighting.
 				</p>
@@ -115,7 +115,7 @@
 			</section>
 
 			<section>
-				<h2>❯ The Rise of Gradients</h2>
+				<h2>The Rise of Gradients</h2>
 				<p>
 					Tati Pastukhova, co-founder of interactive art space ARTECHOUSE, says gradients have become more popular as computer display quality increases. She says the appeal of gradients is “the illusion of dimension, and giving 2-D designs 3-D appeal.” ARTECHOUSE is full of light-based digital installations, but visitors naturally gravitate toward what is most photogenic — including, unexpectedly, the soft lighting the space installed along their staircase for safety reasons.
 				</p>
