--- a/03 everyday color theory/index.html
+++ b/03 everyday color theory/index.html
@@ -41,7 +41,7 @@
 		</header>
 
 		<section>
-			<h2 id="first-h2">❯ Introduction</h2>
+			<h2 id="first-h2">Introduction</h2>
 			<p>
 				The color you see is only the color you think you see. Your interpretation of light landing on a surface depends on your frame of reference and your frame of mind—both can be altered at the speed of light.
 			</p>
@@ -60,14 +60,14 @@
 		</section>
 
 			<section>
-				<h2>❯ Colors In Real Life</h2>
+				<h2>Colors In Real Life</h2>
 				<p>
 					In her piece commemorating a decade of internet colors, designer Laurel Schwulst reflects that “yellow tries to show you the way” in Google Maps. Artist Ian Whittlesea describes yellow as the easiest to mentally conjure in his seven breathing exercises to become invisible—inspired by the literature of Rosicrucianism, theosophy, and esoteric yoga. According to Whittlesea, Indigo is the most difficult color to generate and green can be the most difficult to keep stable.
 				</p>
 			</section>
 
 			<section>
-				<h2>❯ Color Blindness</h2>
+				<h2>Color Blindness</h2>
 				<p>
 					Colors can be hard to see. To the chemist John Dalton, red, orange, yellow, and green all appeared the same. The rest of the color spectrum appeared as gradients of blue and purple. Dalton went on to write the first scientific paper on the subject of color blindness, “Extraordinary facts relating to the vision of colours” in 1798.
 				</p>
@@ -80,7 +80,7 @@
 			</section>
 
 			<section>
-				<h2>❯ Color Perception</h2>
+				<h2>Color Perception</h2>
 				<p>
 					“If one says ‘red’ and there are fifty people listening, it can be expected that there will be fifty reds in their minds,” wrote the artist and educator Josef Albers. We see fifty different reds because we each perceive and experience color differently.
 				</p>
@@ -90,14 +90,14 @@
 			</section>
 
 			<section>
-				<h2>❯ Effect of Colors</h2>
+				<h2>Effect of Colors</h2>
 				<p>
 					In 1810, writer Johann Wolfgang von Goethe decided that an equilateral triangle was the most effective form for his ideas on the psychological effect of colors. This new way of organizing color came about a hundred years after Sir Isaac Newton first arranged colors on a disk, to create an early form of the color wheel. The triangle served Goethe as a modular system of desirable and dissonant color relationships that evoked vibes like serious, mighty, serene, and melancholic.
 				</p>
 			</section>
 
 			<section>
-				<h2>❯ Color Transformation</h2>
+				<h2>Color Transformation</h2>
 				<p>
 					Colors can change depending on the nature of surfaces, like the atmospheric oxidation of the Statue of Liberty’s plating from shiny copper to verdigris (a bluish-green patina). In 1906, the Army Corps of Engineers vetoed a proposal from the United States Congress to restore the statue, concluding that the patina protecting the underlying metal from corrosion “softened the outlines, and made it beautiful.”
 				</p>
@@ -113,7 +113,7 @@
 			</section>
 
 			<section>
-				<h2>❯ The Purkinje Shift</h2>
+				<h2>The Purkinje Shift</h2>
 				<p>
 					In full sunlight, the petals of a red flower appear bright red against duller green leaves. At dusk, the red flowers become darker while blue flowers appear brighter than they did in full daylight. This effect is called the Purkinje shift.
 				</p>
@@ -132,7 +132,7 @@
 			</section>
 
 			<section>
-				<h2>❯ Color Inventions</h2>
+				<h2>Color Inventions</h2>
 				<p>
 					Before the computer, the physical production of pigments limited our access to color. Naturally occurring, finely ground minerals mixed with toxic solvents — or the urine of cows fed mango leaves — were expensive. Ultramarine was the most expensive blue used by Renaissance painters and remained available only to the rich, or those backed by wealthy benefactors, until the invention of a synthetic version in 1826.
 				</p>
@@ -157,7 +157,7 @@
 			</section>
 
 			<section>
-				<h2>❯ Conclusion</h2>
+				<h2>Conclusion</h2>
 				<p>
 					A flat gray surface can come to life through its small modulations of shading, which requires a visual sensitivity to tonal differences. The act of arranging the subtle differences is like arranging lengths of sticks or consecutive numbers, according to Wittgenstein, who once asked, “To what extent can we compare black and white to yellow, red, and blue?”
 				</p>
