adjusting landing page

--- a/index.html
+++ b/index.html
@@ -40,24 +40,18 @@
 					<a href="01 colour and culture/">
 						<p class="booknumbers">01</p>
 						<p class="book-title">Colour and Culture</p>
-						<p class="author1">Ruben Pater</p>
-						<p class="year">2016</p>
 					</a>
 				</li>
 				<li class="book2">
 					<a href="02 gradients/">
 						<p class="booknumbers">02</p> 
 						<p class="book-title">Gradients</p>
-						<p class="author2">Daisy Alioto</p>
-						<p class="year">2019</p>
 					</a>
 				</li>
 				<li class="book3">
 					<a href="03 everyday color theory/">
 						<p class="booknumbers">03</p> 
-						<p id="book3-title">Everyday Color Theory</p>
-						<p class="author3">Cortney Cassidy</p>
-						<p class="year">2020</p>
+						<p class="book-title">Everyday Color Theory</p>
 					</a>
 				</li>
 			</ul>
