--- a/index.html
+++ b/index.html
@@ -29,36 +29,37 @@
 			</ul>
 		</nav>
 
-		<div class="container">
-			<header>
+		<header class="grid-container">
+			<div class="heading">
 				<h1>The Power of Color:</h1>
 				<h1>Culture, Design, and Theory</h1>
-				<p>Color is a big part of how we see and understand the world. This collection of articles looks at how color has different meanings in cultures, how it’s used in trendy designs like gradients, and the basic ideas behind color theory. Together, they show how color can bring people together, spark creativity, and change how we experience things.</p>
-			</header>
+			</div>
+			<p>Color is a big part of how we see and understand the world. This collection of articles looks at how color has different meanings in cultures, how it’s used in trendy designs like gradients, and the basic ideas behind color theory. Together, they show how color can bring people together, spark creativity, and change how we experience things.</p>
+		</header>
 
-			<section>
-				<ul class="bookshelf">
-					<li class="book1">
-						<a href="01 colour and culture/">
-							<p class="booknumbers">01</p>
-							<p class="book-title">Colour and Culture</p>
-						</a>
-					</li>
-					<li class="book2">
-						<a href="02 gradients/">
-							<p class="booknumbers">02</p> 
-							<p class="book-title">Gradients</p>
-						</a>
-					</li>
-					<li class="book3">
-						<a href="03 everyday color theory/">
-							<p class="booknumbers">03</p> 
-							<p class="book-title">Everyday Color Theory</p>
-						</a>
-					</li>
-				</ul>
-			</section>
-		</div>
+
+		<section>
+			<ul class="bookshelf">
+				<li class="book">
+					<a href="01 colour and culture/">
+						<p class="booknumbers">01</p>
+						<p class="book-title">Colour and Culture</p>
+					</a>
+				</li>
+				<li class="book">
+					<a href="02 gradients/">
+						<p class="booknumbers">02</p> 
+						<p class="book-title">Gradients</p>
+					</a>
+				</li>
+				<li class="book">
+					<a href="03 everyday color theory/">
+						<p class="booknumbers">03</p> 
+						<p class="book-title">Everyday Color Theory</p>
+					</a>
+				</li>
+			</ul>
+		</section>
 
 		<footer>
 			<p>
