added arrow on landing page

--- a/index.html
+++ b/index.html
@@ -36,28 +36,31 @@
 		</header>
 
 
-		<section>
+		<div>
 			<ul class="bookshelf">
 				<li class="book">
 					<a href="01 colour and culture/">
 						<p class="booknumbers">01</p>
 						<p class="book-title">Colour and Culture</p>
+						<p>→</p>
 					</a>
 				</li>
 				<li class="book">
 					<a href="02 gradients/">
 						<p class="booknumbers">02</p> 
 						<p class="book-title">Gradients</p>
+						<p>→</p>
 					</a>
 				</li>
 				<li class="book">
 					<a href="03 everyday color theory/">
 						<p class="booknumbers">03</p> 
 						<p class="book-title">Everyday Color Theory</p>
+						<p>→</p>
 					</a>
 				</li>
 			</ul>
-		</section>
+		</div>
 
 		<footer>
 			<p>
