--- a/01 colour and culture/index.html
+++ b/01 colour and culture/index.html
@@ -25,7 +25,7 @@
 			</ul>
 		</nav>
 		
-		<header>
+		<header class="grid">
 			<h1 id="heading-number">01</h1>
 			<h1>Colour and Culture</h1>
 			<p>
