--- a/03 everyday color theory/index.html
+++ b/03 everyday color theory/index.html
@@ -25,7 +25,7 @@
 			</ul>
 		</nav>
 		
-		<header>
+		<header class="grid">
 			<h1 id="heading-number">03</h1>
 			<h1>Everyday Color Theory</h1>
 			<p>
