--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 					<a href="../">Home</a>
 				</li>
 				<li>
-					<a href="../01 colour and culture/">01</a>
+					<a href="01 colour and culture/">01</a>
 				</li>
 				<li>
-					<a href="../02 gradients/">02</a>
+					<a href="02 gradients/">02</a>
 				</li>
 				<li>
 					<a href="../03 everyday color theory/">03</a>
