--- a/02 gradients/index.html
+++ b/02 gradients/index.html
@@ -32,8 +32,7 @@
 				The colorful design trend aiming to soothe these anxious times: Here’s why The Daily, Coachella, and Facebook all use backgrounds that look like a sunset.
 			</p>
 			<section class="author-info">
-				<p>By <em><a href="https://www.vox.com/the-goods/2019/3/1/18241592/gradients-facebook-coachella-daily-fading-pastel-design-trend">Daisy Alioto</a></em></p>
-				<p>March 1st, 2019</p>
+				<p>By <em><a href="https://www.vox.com/the-goods/2019/3/1/18241592/gradients-facebook-coachella-daily-fading-pastel-design-trend">Daisy Alioto</a></em>, March 1st, 2019</p>
 			</section>
 		</header>
 
