blockquote and added h3 on article3

--- a/02 gradients/index.html
+++ b/02 gradients/index.html
@@ -37,14 +37,14 @@
 		</header>
 
 		<section>
-			<h2 id="first-h2"><span class="point">●</span> What it is?</h2>
+			<h2 id="first-h2"><span class="point">◉</span> What it is?</h2>
 			<p>
 				A digital or print effect where one color fades into another. Typically rendered in soft or pastel tones.
 			</p>
 		</section>
 
 			<section>
-				<h2><span class="point">●</span> Where it is?</h2>
+				<h2><span class="point">◉</span> Where it is?</h2>
 				<p>
 					Gradients are seemingly everywhere in media and marketing. They are part of a suite of Facebook status backdrops introduced in 2017 and the branding for the New York Times’ popular podcast The Daily, which displays a yellow to blue gradient.
 				</p>
@@ -63,14 +63,14 @@
 			</section>
 
 			<section>
-				<h2><span class="point">●</span> Why you’re seeing it everywhere?</h2>
+				<h2><span class="point">◉</span> Why you’re seeing it everywhere?</h2>
 				<p>
 					Gradients are the confluence of three different trends: Light and Space art, vaporwave, and bisexual lighting.
 				</p>
 			</section>
 
 			<section>
-				<h3><span class="point">⁃</span> Light and Space</h3>
+				<h3><span class="point">●</span> Light and Space</h3>
 				<p>
 					In the art and design world, Light and Space — developed in the 1960s and ’70s — has been experiencing a revival thanks to its Instagramability. Light and Space pioneer James Turrell has been embraced by celebrities like Beyoncé, Drake, and Kanye West. Drake’s Hotline Bling video was inspired by Turrell’s light-infused rooms called Ganzfelds. The Kardashian-Jenner-West crew posted an Instagram in front of one of Turrell’s works in Los Angeles. (I was yelled at by security for taking a picture there but it’s fine.)
 				</p>
@@ -86,7 +86,7 @@
 			</section>
 
 			<section>
-				<h3><span class="point">⁃</span> Vaporwave</h3>
+				<h3><span class="point">●</span> Vaporwave</h3>
 				<p>
 					Gradients might be a manifestation of longing for sunshine and surf. But they also belong to the placeless digital citizen. 1980s and ’90s kids may remember messing around in Microsoft Paint and Powerpoint as a child, filling in shapes with these same gradients. It’s no surprise that this design effect is part of the technological nostalgia that fuels the vaporwave movement.
 				</p>
@@ -96,7 +96,7 @@
 			</section>
 
 			<section>
-				<h3><span class="point">⁃</span> Bisexual lighting</h3>
+				<h3><span class="point">●</span> Bisexual lighting</h3>
 				<p>
 					When Facebook rolled out gradient status backgrounds in 2017, they knew what they were doing. “They have so much data into how the world works,” says Kerry Flynn, platforms reporter at Digiday. “They had a slow rollout to the color gradients … Obviously they could have pulled the plug anytime.”
 				</p>
@@ -112,7 +112,7 @@
 			</section>
 
 			<section>
-				<h2><span class="point">●</span> The Rise of Gradients</h2>
+				<h2><span class="point">◉</span> The Rise of Gradients</h2>
 				<p>
 					Tati Pastukhova, co-founder of interactive art space ARTECHOUSE, says gradients have become more popular as computer display quality increases. She says the appeal of gradients is “the illusion of dimension, and giving 2-D designs 3-D appeal.” ARTECHOUSE is full of light-based digital installations, but visitors naturally gravitate toward what is most photogenic — including, unexpectedly, the soft lighting the space installed along their staircase for safety reasons.
 				</p>
