--- a/03 everyday color theory/index.html
+++ b/03 everyday color theory/index.html
@@ -38,7 +38,7 @@
 		</header>
 
 		<section>
-			<h2 id="first-h2"><span class="point">●</span> Introduction</h2>
+			<h2 id="first-h2"><span class="point">◉</span> Introduction</h2>
 			<p>
 				The color you see is only the color you think you see. Your interpretation of light landing on a surface depends on your frame of reference and your frame of mind—both can be altered at the speed of light.
 			</p>
@@ -57,14 +57,14 @@
 		</section>
 
 			<section>
-				<h2><span class="point">●</span> Colors In Real Life</h2>
+				<h3><span class="point">●</span> Laurel Schwulst</h3>
 				<p>
 					In her piece commemorating a decade of internet colors, designer Laurel Schwulst reflects that “yellow tries to show you the way” in Google Maps. Artist Ian Whittlesea describes yellow as the easiest to mentally conjure in his seven breathing exercises to become invisible—inspired by the literature of Rosicrucianism, theosophy, and esoteric yoga. According to Whittlesea, Indigo is the most difficult color to generate and green can be the most difficult to keep stable.
 				</p>
 			</section>
 
 			<section>
-				<h2><span class="point">●</span> Color Blindness</h2>
+				<h2><span class="point">◉</span> Color Blindness</h2>
 				<p>
 					Colors can be hard to see. To the chemist John Dalton, red, orange, yellow, and green all appeared the same. The rest of the color spectrum appeared as gradients of blue and purple. Dalton went on to write the first scientific paper on the subject of color blindness, “Extraordinary facts relating to the vision of colours” in 1798.
 				</p>
@@ -77,7 +77,7 @@
 			</section>
 
 			<section>
-				<h2><span class="point">●</span> Color Perception</h2>
+				<h3><span class="point">●</span> Different Reds</h3>
 				<p>
 					“If one says ‘red’ and there are fifty people listening, it can be expected that there will be fifty reds in their minds,” wrote the artist and educator Josef Albers. We see fifty different reds because we each perceive and experience color differently.
 				</p>
@@ -87,14 +87,14 @@
 			</section>
 
 			<section>
-				<h2><span class="point">●</span> Effect of Colors</h2>
+				<h2><span class="point">◉</span> Effect of Colors</h2>
 				<p>
 					In 1810, writer Johann Wolfgang von Goethe decided that an equilateral triangle was the most effective form for his ideas on the psychological effect of colors. This new way of organizing color came about a hundred years after Sir Isaac Newton first arranged colors on a disk, to create an early form of the color wheel. The triangle served Goethe as a modular system of desirable and dissonant color relationships that evoked vibes like serious, mighty, serene, and melancholic.
 				</p>
 			</section>
 
 			<section>
-				<h2><span class="point">●</span>  Transformation</h2>
+				<h2><span class="point">◉</span>  Transformation</h2>
 				<p>
 					Colors can change depending on the nature of surfaces, like the atmospheric oxidation of the Statue of Liberty’s plating from shiny copper to verdigris (a bluish-green patina). In 1906, the Army Corps of Engineers vetoed a proposal from the United States Congress to restore the statue, concluding that the patina protecting the underlying metal from corrosion “softened the outlines, and made it beautiful.”
 				</p>
@@ -110,7 +110,7 @@
 			</section>
 
 			<section>
-				<h2><span class="point">●</span> The Purkinje Shift</h2>
+				<h2><span class="point">◉</span> The Purkinje Shift</h2>
 				<p>
 					In full sunlight, the petals of a red flower appear bright red against duller green leaves. At dusk, the red flowers become darker while blue flowers appear brighter than they did in full daylight. This effect is called the Purkinje shift.
 				</p>
@@ -129,7 +129,7 @@
 			</section>
 
 			<section>
-				<h2><span class="point">●</span> Color Inventions</h2>
+				<h2><span class="point">◉</span> Color Inventions</h2>
 				<p>
 					Before the computer, the physical production of pigments limited our access to color. Naturally occurring, finely ground minerals mixed with toxic solvents — or the urine of cows fed mango leaves — were expensive. Ultramarine was the most expensive blue used by Renaissance painters and remained available only to the rich, or those backed by wealthy benefactors, until the invention of a synthetic version in 1826.
 				</p>
@@ -142,6 +142,10 @@
 				<p>
 					With the invention of movable type, the colorful heraldic language for coats of arms, was transferred into a one-color hatching system for books, wax seals, and coins. The graphic design duo Dexter Sinister tested the transference of color data to one-color hatching by converting a László Moholy-Nagy panel that he originally “painted” over the phone with a manufacturer.
 				</p>
+			</section>
+
+			<section>
+				<h3><span class="point">●</span> Farnsworth-Munsell Test</h3>
 				<p>
 					In the Farnsworth-Munsell test, in which a subject has to arrange 100 hues on a continuous gradation scale, less than sixteen percent achieve a perfect score. According to Johannes Itten, one of Albers’s instructors at the Weimar Bauhaus, distinguishing the many shades of a color depends on the sensitivity of the eye and “the response threshold of the observer.” In English, we only use about thirty names for colors in daily vocabulary, and only a “trained artist can discriminate and name a great many hues,” wrote Umberto Eco in “The Colors We See.”
 				</p>
@@ -154,7 +158,7 @@
 			</section>
 
 			<section>
-				<h2><span class="point">●</span> Conclusion</h2>
+				<h2><span class="point">◉</span> Conclusion</h2>
 				<p>
 					A flat gray surface can come to life through its small modulations of shading, which requires a visual sensitivity to tonal differences. The act of arranging the subtle differences is like arranging lengths of sticks or consecutive numbers, according to Wittgenstein, who once asked, “To what extent can we compare black and white to yellow, red, and blue?”
 				</p>
