removed ../ on landing page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<a href="02 gradients/">02</a>
 				</li>
 				<li>
-					<a href="../03 everyday color theory/">03</a>
+					<a href="03 everyday color theory/">03</a>
 				</li>
 			</ul>
 		</nav>
