--- a/01 colour and culture/index.html
+++ b/01 colour and culture/index.html
@@ -25,7 +25,7 @@
 			</ul>
 		</nav>
 		
-		<header class="grid">
+		<header>
 			<h1 id="heading-number">01</h1>
 			<h1>Colour and Culture</h1>
 			<p>
@@ -38,29 +38,25 @@
 
 		<section>
 			<h2 id="first-h2"><span class="point">◉</span> Colour Psychology</h2>
-			<div class="content">
-				<p>
-					How people respond to colour is of great interest to those who work in marketing. Colour psychology research is often focused on how the colour of a logo or a product will yield higher sales, and what colour preferences can be found in certain age groups and cultures. 
-				</p>
-				<p>
-					The study of the psychological effects of colour have coincided with colour theory in general. Goethe focused on the experience of colour in his Zur farbenlehre from 1810, in opposition to Sir Isaac Newton’s rational approach. Goethe and Schiller coupled colours to character traits: red for beautiful, yellow for good, green for useful, and blue for common. Gestalt psychology in the early 1900s also  attributed universal emotions to colours, a theory that was taught to students at the Bauhaus by Wassily Kandinsky. 
-				</p>
-				<p>
-					The best known colour psychology test was conducted by Max Lüscher in the 1940s, when he tested the responses of people to a series of coloured cards. A psychologist could interpret the person’s character based on the test results. The interpretation of this research in colour psychology is disputed, since it is not clear whether people respond to the colours or the cultural concept of the colour. It is more likely that the cultural context, our upbringing, and personal preferences influence our interpretation of colour more than anything else. 
-				</p>
-				<p>
-					Some colour psychology findings have been proven to work. ‘Cooler’ colours can have a calming influence on people, which is why hospitals and prison walls are often painted in a soft greenish colour. Another research shows that the colour of placebo pills  influences their effectiveness. Blue coloured pills work better as  depressants, and red colour pills better as stimulants.
-				</p>
-			</div>
+			<p>
+				How people respond to colour is of great interest to those who work in marketing. Colour psychology research is often focused on how the colour of a logo or a product will yield higher sales, and what colour preferences can be found in certain age groups and cultures. 
+			</p>
+			<p>
+				The study of the psychological effects of colour have coincided with colour theory in general. Goethe focused on the experience of colour in his Zur farbenlehre from 1810, in opposition to Sir Isaac Newton’s rational approach. Goethe and Schiller coupled colours to character traits: red for beautiful, yellow for good, green for useful, and blue for common. Gestalt psychology in the early 1900s also  attributed universal emotions to colours, a theory that was taught to students at the Bauhaus by Wassily Kandinsky. 
+			</p>
+			<p>
+				The best known colour psychology test was conducted by Max Lüscher in the 1940s, when he tested the responses of people to a series of coloured cards. A psychologist could interpret the person’s character based on the test results. The interpretation of this research in colour psychology is disputed, since it is not clear whether people respond to the colours or the cultural concept of the colour. It is more likely that the cultural context, our upbringing, and personal preferences influence our interpretation of colour more than anything else. 
+			</p>
+			<p>
+				Some colour psychology findings have been proven to work. ‘Cooler’ colours can have a calming influence on people, which is why hospitals and prison walls are often painted in a soft greenish colour. Another research shows that the colour of placebo pills  influences their effectiveness. Blue coloured pills work better as  depressants, and red colour pills better as stimulants.
+			</p>
 		</section>
 
 		<section>
 			<h2><span class="point">◉</span> Colour and Culture</h2>
-			<div class="content">
-				<p>
-					Research shows that ninety-eight languages have words for the same eleven basic colours; however, the meaning a colour may have can be very different. There are conflicting theories on whether the cultural meanings of colours can be categorised. Meanings can change over time and depend on the context. Black may be the colour of mourning in many countries, though a black book cover or a black poster is not always associated with death. Another example is that brides in China traditionally wear red, but many brides have started to wear white in recent decades. The cultural meaning of colours is not set but always changing. The next few pages list some of the meanings of colours in different cultures.
-				</p>
-			</div>
+			<p>
+				Research shows that ninety-eight languages have words for the same eleven basic colours; however, the meaning a colour may have can be very different. There are conflicting theories on whether the cultural meanings of colours can be categorised. Meanings can change over time and depend on the context. Black may be the colour of mourning in many countries, though a black book cover or a black poster is not always associated with death. Another example is that brides in China traditionally wear red, but many brides have started to wear white in recent decades. The cultural meaning of colours is not set but always changing. The next few pages list some of the meanings of colours in different cultures.
+			</p>
 		</section>
 
 		<section>
