--- a/02 gradients/index.html
+++ b/02 gradients/index.html
@@ -25,7 +25,7 @@
 			</ul>
 		</nav>
 		
-		<header class="grid">
+		<header>
 			<h1 id="heading-number">02</h1>
 			<h1>Gradients</h1>
 			<p>
@@ -80,8 +80,10 @@
 				<p>
 					James Turrell’s works come with a warning because the visitor quickly loses all depth perception. Soft gradients are alluring because they cut through the noise of social media, but they also are disorienting. The Twitter bot soft landscapes operates on a similar principle, but some days the landscape all but disappears.
 				</p>
-				<p>
-					“It’s nice to see calming things amongst all of the social ramifications of Instagram,” says Rion Harmon of Day Job, the design firm of record for Recess. Harmon compares the Recess branding to a sunset so beautiful you can’t help but stare (or take a picture) however busy you are. Changes to the sky are even more pronounced in Los Angeles, where Harmon’s studio is now based. “The quality of light in LA is something miraculous,” he says. The Light and Space movement was also started in Southern California, and it’s in the DNA of Coachella.
+				<blockquote>
+					<span class="point">❝</span> It’s nice to see calming things amongst all of the social ramifications of Instagram <span class="point">❞</span>
+				</blockquote>
+				<p>Says Rion Harmon of Day Job, the design firm of record for Recess. Harmon compares the Recess branding to a sunset so beautiful you can’t help but stare (or take a picture) however busy you are. Changes to the sky are even more pronounced in Los Angeles, where Harmon’s studio is now based. “The quality of light in LA is something miraculous,” he says. The Light and Space movement was also started in Southern California, and it’s in the DNA of Coachella.
 				</p>
 			</section>
 
@@ -107,7 +109,13 @@
 					It’s ironic that in order to do so, Facebook borrowed from a digital texture most millennials associate with a time before Facebook. But it also mimics a current trend in film and television: bisexual lighting.
 				</p>
 				<p>
-					As Know Your Meme explains, “bisexual lighting is a slang in the queer community for neon lighting with high emphasis on pinks, purples, and blues in film.” These pinks, purples and blues often fade into one another — appearing like a gradient when rendered in two dimensions. Bisexual lighting shows up in the futuristic genre cyberpunk, which imagines an era in which high technology and low technology combine and cities are neon-bathed, landmarkless Gothams. (Overlapping with vaporwave.) Mainstream examples of cyberpunk include Blade Runner, Ghost in the Shell, and Black Mirror (specifically the “San Junipero” episode). Hotline Bling makes the list of examples for bisexual lighting; the gradients come full circle.
+					As Know Your Meme explains, 
+				</p>
+				<blockquote>
+					<span class="point">❝</span> bisexual lighting is a slang in the queer community for neon lighting with high emphasis on pinks, purples, and blues in film. <span class="point">❞</span>
+				</blockquote>
+				<p>
+					These pinks, purples and blues often fade into one another — appearing like a gradient when rendered in two dimensions. Bisexual lighting shows up in the futuristic genre cyberpunk, which imagines an era in which high technology and low technology combine and cities are neon-bathed, landmarkless Gothams. (Overlapping with vaporwave.) Mainstream examples of cyberpunk include Blade Runner, Ghost in the Shell, and Black Mirror (specifically the “San Junipero” episode). Hotline Bling makes the list of examples for bisexual lighting; the gradients come full circle.
 				</p>
 			</section>
 
