--- a/03 everyday color theory/index.html
+++ b/03 everyday color theory/index.html
@@ -25,7 +25,7 @@
 			</ul>
 		</nav>
 		
-		<header class="grid">
+		<header>
 			<h1 id="heading-number">03</h1>
 			<h1>Everyday Color Theory</h1>
 			<p>
@@ -99,7 +99,8 @@
 					Colors can change depending on the nature of surfaces, like the atmospheric oxidation of the Statue of Liberty’s plating from shiny copper to verdigris (a bluish-green patina). In 1906, the Army Corps of Engineers vetoed a proposal from the United States Congress to restore the statue, concluding that the patina protecting the underlying metal from corrosion “softened the outlines, and made it beautiful.”
 				</p>
 				<p>
-					We can see those softened outlines because light helps us discern forms. I find Vantablack—one of the darkest known substances, absorbing 99.96% of visible light—unsettling. As Kassia St Clair explains in The Secret Lives of Color, “black is an expression of light, in this case, it’s absence.” My eyes hunt for the surface, and Vantablack leaves nothing to see.
+					We can see those softened outlines because light helps us discern forms. I find Vantablack—one of the darkest known substances, absorbing 99.96% of visible light—unsettling. As Kassia St Clair explains in The Secret Lives of Color, 
+					“black is an expression of light, in this case, it’s absence.” My eyes hunt for the surface, and Vantablack leaves nothing to see.
 				</p>
 				<p>
 					White surfaces reflect and scatter visible light, and according to Wittgenstein “very few people have seen pure white.” In the essay “In Praise of Shadows” on traditional Japanese aesthetics, Jun’ichirō Tanizaki wrote that “western paper turns away light, while [Japanese] paper seems to take it in, to envelope it gently, like the soft surface of a first snowfall.” If you take a piece of computer paper, that you know is white in its normal surroundings, and place it next to snow, the paper may appear grey. A white can be light grey in poor lighting or a light grey in good lighting.
