--- a/01 colour and culture/index.html
+++ b/01 colour and culture/index.html
@@ -42,7 +42,13 @@
 				How people respond to colour is of great interest to those who work in marketing. Colour psychology research is often focused on how the colour of a logo or a product will yield higher sales, and what colour preferences can be found in certain age groups and cultures. 
 			</p>
 			<p>
-				The study of the psychological effects of colour have coincided with colour theory in general. Goethe focused on the experience of colour in his Zur farbenlehre from 1810, in opposition to Sir Isaac Newton’s rational approach. Goethe and Schiller coupled colours to character traits: red for beautiful, yellow for good, green for useful, and blue for common. Gestalt psychology in the early 1900s also  attributed universal emotions to colours, a theory that was taught to students at the Bauhaus by Wassily Kandinsky. 
+				The study of the psychological effects of colour have coincided with colour theory in general. Goethe focused on the experience of colour in his Zur farbenlehre from 1810, in opposition to Sir Isaac Newton’s rational approach. 
+			</p>
+			<blockquote>
+				<span class="point">❝</span> Goethe and Schiller coupled colours to character traits: red for beautiful, yellow for good, green for useful, and blue for common. <span class="point">❞</span>
+			</blockquote> 
+			<p>
+				Gestalt psychology in the early 1900s also  attributed universal emotions to colours, a theory that was taught to students at the Bauhaus by Wassily Kandinsky. 
 			</p>
 			<p>
 				The best known colour psychology test was conducted by Max Lüscher in the 1940s, when he tested the responses of people to a series of coloured cards. A psychologist could interpret the person’s character based on the test results. The interpretation of this research in colour psychology is disputed, since it is not clear whether people respond to the colours or the cultural concept of the colour. It is more likely that the cultural context, our upbringing, and personal preferences influence our interpretation of colour more than anything else. 
