--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="../">Home</a>
+					<a href="">Home</a>
 				</li>
 				<li>
 					<a href="01 colour and culture/">01</a>
