--- a/02 gradients/index.html
+++ b/02 gradients/index.html
@@ -125,7 +125,13 @@
 					Tati Pastukhova, co-founder of interactive art space ARTECHOUSE, says gradients have become more popular as computer display quality increases. She says the appeal of gradients is “the illusion of dimension, and giving 2-D designs 3-D appeal.” ARTECHOUSE is full of light-based digital installations, but visitors naturally gravitate toward what is most photogenic — including, unexpectedly, the soft lighting the space installed along their staircase for safety reasons.
 				</p>
 				<p>
-					Before gradients, neon lettering was the Instagram lighting aesthetic du jour. Gradients are wordless — like saying Live Laugh Love with just colors. “There’s an inherent progression in gradients, you are being taken through something. Like that progression of Live Laugh Love. Of starting at one point and ending at another point. Evoking that visually is something people are very drawn to,” says Taylor Lorenz, a staff writer at the Atlantic who covers internet culture.
+					Before gradients, neon lettering was the Instagram lighting aesthetic du jour. Gradients are wordless — like saying Live Laugh Love with just colors.
+				</p>
+				<blockquote>
+					<span class="point">❝</span> There’s an inherent progression in gradients, you are being taken through something. Like that progression of Live Laugh Love. Of starting at one point and ending at another point. Evoking that visually is something people are very drawn to, <span class="point">❞</span>
+				</blockquote>
+				<p>
+					Says Taylor Lorenz, a staff writer at the Atlantic who covers internet culture.
 				</p>
 				<p>
 					Gradients are also boundaryless. In 2016, artist Wolfgang Tillmans used gradients in his anti-Brexit poster campaign. Through gradients, designers have found the perfect metaphor for subjectivity in an era when even the word “fact” is up for debate. “Gradients are a visual manifestation of all of these different spectrums that we live on,” including those of politics, gender, and sexuality, says Lorenz. “Before, I think we lived in a binary world. [Gradients are] a very modern representation of the world.”
