linked the first article

--- a/01 colour and culture/index.html
+++ b/01 colour and culture/index.html
@@ -32,7 +32,7 @@
 				Discover how different cultures attach unique meanings to colors, from luck and power to spirituality and mourning. Read on to learn how color psychology influences everything from branding to design.
 			</p>
 			<section class="author-info">
-				<p>By <em><a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/https://readings.design/PDF/Color_Politics_of_Design.pdf">Ruben Pater</a></em>, 2016</p>
+				<p>By <em><a href="https://readings.design/PDF/Color_Politics_of_Design.pdf">Ruben Pater</a></em>, 2016</p>
 			</section>
 		</header>
 
