--- a/01 colour and culture/index.html
+++ b/01 colour and culture/index.html
@@ -25,6 +25,7 @@
 			</ul>
 		</nav>
 		
+		<div class="column">
 		<header>
 			<h1 id="heading-number">01</h1>
 			<h1>Colour and Culture</h1>
@@ -36,6 +37,7 @@
 			</section>
 		</header>
 
+	<div class="article">
 		<section>
 			<h2 id="first-h2"><span class="point">◉</span> Colour Psychology</h2>
 			<p>
@@ -139,6 +141,8 @@
 				The green flag was a personal choice of Muammar Gaddafi whose manifesto was called the ‘Green Book’. Artist Yuri Veerman collected the different digital versions of the Libyan flag that were discussed on the English Wikipedia page, ‘Flag of Libya’. Between 2005 and 2011 the chromatic representation of Libya was revised fifteen times, each with different shade of green. After a six-year fight over the right shade of ‘Gadaffi green’, a fifteenth revision was made, marking the fall of the Libyan regime and the last monochrome flag. 
 			</p>
 		</section>
+		</div>
+	</div>
 
 		<footer>
 			<p>
