--- a/02 gradients/index.html
+++ b/02 gradients/index.html
@@ -24,7 +24,8 @@
 				</li>
 			</ul>
 		</nav>
-		
+
+	<div class="column">
 		<header>
 			<h1 id="heading-number">02</h1>
 			<h1>Gradients</h1>
@@ -35,7 +36,8 @@
 				<p>By <em><a href="https://www.vox.com/the-goods/2019/3/1/18241592/gradients-facebook-coachella-daily-fading-pastel-design-trend">Daisy Alioto</a></em>, March 1st, 2019</p>
 			</section>
 		</header>
-
+		
+	<div class="article">
 		<section>
 			<h2 id="first-h2"><span class="point">◉</span> What it is?</h2>
 			<p>
@@ -143,11 +145,13 @@
 					Calico co-founder Nick Cope says the Aurora collection is often used in meditation rooms. He and his wife have installed it across from their bed at home. “The design was created to immerse viewers in waves and washes of tranquil atmospheric color,” Cope says, adding, “Regardless of the weather, we wake up to a sunrise every morning.”
 				</p>
 			</section>
+		</div>
+		</div>
 
 			<footer>
-				<p>
+				<!-- <p>
 					Designed in 2024 by Irene Ahn
-				</p>
+				</p> -->
 				<a id="top" href="#">↑</a>
 			</footer>
 	</body>
