--- a/03 everyday color theory/index.html
+++ b/03 everyday color theory/index.html
@@ -25,6 +25,7 @@
 			</ul>
 		</nav>
 		
+	<div class="column">
 		<header>
 			<h1 id="heading-number">03</h1>
 			<h1>Everyday Color Theory</h1>
@@ -37,6 +38,7 @@
 			</section>
 		</header>
 
+	<div class="article">
 		<section>
 			<h2 id="first-h2"><span class="point">◉</span> Introduction</h2>
 			<p>
@@ -167,11 +169,13 @@
 					To use his own words in response, “Colors are the children of light, and light is their mother.” Notably, Vanderpoel also called color “the music of light.” Black and white, yellow, red, and blue preserve their relationship with light through the scales of tones between their lightest and darkest. The continuous scale does not change in saturation, but changes in brilliance. As all colors we can and cannot see differ depending on their surface, surrounding, and our state of mind—they will always in some way share their brilliance.
 				</p>
 			</section>
+		</div>
+		</div>
 
 			<footer>
-				<p>
+				<!-- <p>
 					Designed in 2024 by Irene Ahn
-				</p>
+				</p> -->
 				<a id="top" href="#">↑</a>
 			</footer>
 	</body>
