--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 		<header>
 			<h1>The Power of Color:</h1>
-			<p>Culture, Design, and Theory: Color is a big part of how we see and understand the world. This collection of articles looks at how color has different meanings in cultures, how it’s used in trendy designs like gradients, and the basic ideas behind color theory. Together, they show how color can bring people together, spark creativity, and change how we experience things.</p>
+			 <p>Color shapes how we see, feel, and interact with the world around us. This website brings together three articles that explore different aspects of color: its cultural meanings, its role in modern design trends like gradients, and the basics of color theory that guide creative decisions. Together, these pieces highlight the unique ability of color to connect people, spark emotions, and influence how we experience art, design, and everyday life.
+			 </p>
 		</header>
 
 
